make a flexbox container

--- a/index.html
+++ b/index.html
@@ -13,15 +13,27 @@
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<header>
 
-  We're coming soon
+</header>
+<div class="container">
+  <div class="box-1">
+    We're coming soon
+    
+    Hello fellow shoppers! We're currently building our new fashion store. 
+    Add your email below to stay up-to-date with announcements and our launch deals.
+    
+    Email Address
+  </div>
+  <div class="box-2">
+    <img src="images/hero-desktop.jpg" class="image">
+  </div>
+</div>
 
-  Hello fellow shoppers! We're currently building our new fashion store. 
-  Add your email below to stay up-to-date with announcements and our launch deals.
 
-  Email Address
   
   <footer>
     <p class="attribution">
