--- a/index.html
+++ b/index.html
@@ -33,39 +33,42 @@
     />
   </head>
   <body>
-    <header></header>
     <div class="container">
       <div class="box-1">
-        <div class="logo">
-          <img src="./images/logo.svg" />
-        </div>
-        <div class="label">
-          <h1 class="line1">WE'RE</h1>
-          <h1>
-            COMING <br />
-            SOON
-          </h1>
-          <p>
-            Hello fellow shoppers! We're currently building our new fashion
-            store. Add your email below to stay up-to-date with announcements
-            and our launch deals.
-            <input type="email" placeholder="Email Address" />
-            <button>
-              <img src="./images/icon-arrow.svg" alt="" srcset="" />
-            </button>
-          </p>
+        <div class="info">
+          <div class="logo">
+            <img src="./images/logo.svg" />
+          </div>
+          <div class="label">
+            <h1 class="line1">WE'RE</h1>
+            <h1>
+              COMING <br />
+              SOON
+            </h1>
+            <p>
+              Hello fellow shoppers! We're currently building our new <br />
+              fashion store. Add your email below to stay up-to-date with <br />
+              announcements and our launch deals.
+              <input type="email" placeholder="Email Address" />
+              <button>
+                <img src="./images/icon-arrow.svg" alt="" srcset="" />
+              </button>
+            </p>
+          </div>
         </div>
       </div>
       <div class="box-2">
-        <img src="images/hero-desktop.jpg" />
+        <img src="images/hero-desktop.jpg" class="image" />
       </div>
     </div>
 
-    <!-- <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer> -->
+    <footer>
+      <p class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="#">Your Name Here</a>.
+      </p>
+    </footer>
   </body>
 </html>
