--- a/index.html
+++ b/index.html
@@ -46,14 +46,16 @@
               SOON
             </h1>
             <p>
-              Hello fellow shoppers! We're currently building our new <br />
-              fashion store. Add your email below to stay up-to-date with <br />
-              announcements and our launch deals.
+              Hello fellow shoppers! We're currently building our new fashion
+              store. Add your email below to stay up-to-date with announcements
+              and our launch deals.
+            </p>
+            <div class="email-container">
               <input type="email" placeholder="Email Address" />
               <button>
                 <img src="./images/icon-arrow.svg" alt="" srcset="" />
               </button>
-            </p>
+            </div>
           </div>
         </div>
       </div>
