--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
     />
   </head>
   <body>
+    <nav class="topnav">
+      <img src="./images/logo.svg" class="logo" />
+    </nav>
     <div class="container">
       <div class="box-1">
         <div class="info">
-          <div class="logo">
-            <img src="./images/logo.svg" />
-          </div>
           <div class="label">
             <h1 class="line1">WE'RE</h1>
             <h1>
@@ -60,7 +60,7 @@
         </div>
       </div>
       <div class="box-2">
-        <img src="images/hero-desktop.jpg" class="image" />
+        <!-- <img src="images/hero-desktop.jpg" class="image" /> -->
       </div>
     </div>
 
@@ -69,7 +69,7 @@
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
-        >. Coded by <a href="#">Your Name Here</a>.
+        >. Coded by <a href="https://github.com/tricksap">tricksap</a>.
       </p>
     </footer>
   </body>
